test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_nested_in_declaration.plx
extrn ptr: *[3][4]any; #  array of incomplete element type is illegal (including nested array)

pub fn foo(none) *any {
    return ptr
}
